[gd_scene load_steps=5 format=2]

[ext_resource path="res://Alien.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 87.2031, 68.6287 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( -217.789, -19.799 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 1134.2, 302.441 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 1144.1, 303.571 )
rotation = -1.57931
scale = Vector2( 0.254602, 0.311219 )
frames = SubResource( 2 )

[node name="posicion_laser" type="Position2D" parent="."]
position = Vector2( 984.292, 305.47 )

[node name="Bala_cd" type="Timer" parent="."]
wait_time = 0.3

[connection signal="timeout" from="Bala_cd" to="." method="_bala_cd"]
